--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyNj2oTTKB9RWkYL6jTAPFvo",
       "include_colab_link": true
     },
